--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -21,6 +23,7 @@ android {
     }
 
     defaultConfig {
+        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.nativacu.flash_chat"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
@@ -43,6 +46,4 @@ flutter {
     source = "../.."
 }
 
-dependencies {
-    implementation platform('com.google.firebase:firebase-bom:33.2.0')
-}
+apply plugin: 'com.google.gms.google-services'
